--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-cv2
-time
-os
-threading
-pytesseract
-imutils
+numpy==1.24.2
+opencv-python==4.7.0.68
+pytesseract==0.3.10
+imutils==0.5.4
+streamlit==1.17.0
+Pillow==9.4.0
